Update the mask bounds when window bounds is changed

Recently the chrome pip windows have WindowStateType::PIP and behaves as
pip windows. Pip windows moves with animation but the mask bounds was
not synced with these animation. As the result, the test was flaky (see
the bug).

This CL adds the observer of window bounds and make it sure that the
layer bounds is synced with the window bounds.

Bug: 901235
Test: Ran PictureInPictureWindowControllerBrowserTest.
    EnterPictureInPictureThenFullscreen 10 times and observed no error.

Change-Id: Ide03ab1465170ccaf35af08377d3dd1df0cf7ee2
Reviewed-on: https://chromium-review.googlesource.com/c/1316986
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606273}
Former-commit-id: 12ee465b66458244a1dfd04e87b6f3b87dd543e9